# rusty-sando-c0ff

bot/: Cargo.toml
bot/crates/artemis-core/: Cargo.toml
bot/crates/strategy/: Cargo.toml
bot/sando-bin/: Cargo.toml
